tests/NormalTests/paczka1/small_fuzzy/23204581.err
Error in line 2: h09fFApGN S780 90,0
Error in line 3: wwpmpt A206 47,1
Error in line 1: S780 A380 0,1
Error in line 14: IMOa4ncf A206 25,32
